Added VS integration tests