@@ -31,6 +31,17 @@ subprojects {
     sourceCompatibility = 13
     targetCompatibility = 13
 
+    // Ena ble preview
+    tasks.test {
+        jvmArgs("--enable-preview")
+    }
+    tasks.withType(JavaCompile) {
+        options.compilerArgs += "--enable-preview"
+    }
+    tasks.withType(JavaExec) {
+        jvmArgs += '--enable-preview'
+    }
+
     dependencies {
         // Test framework
         testImplementation group: 'junit', name: 'junit', version: '4.12'
